<resources>
    <string name="app_name">XHaloFloatingWindow</string>
    <string name="app_description">Halo Floating Windows from Paranoid Android with Movable &amp; Resizable feature.(zst123)</string>
    <string name="app_blacklist">Blacklist</string>
    <string name="app_whitelist">Whitelist</string>
    <string name="app_testing">Testing</string>
    <string name="pref_window_top_title">Popup Window</string>
    <string name="pref_window_top_summary">Customize Window Properties</string>
    <string name="pref_alpha_title">Popup Alpha</string>
    <string name="pref_alpha_summary">Transparency of Window</string>
    <string name="pref_dim_title">Popup Dim</string>
    <string name="pref_dim_summary">Background Dimming of Popup</string>
    <string name="pref_gravity_title">Gravity</string>
    <string name="pref_gravity_summary">Position of the Popup</string>
    <string name="pref_size_top_title">Popup Size</string>
    <string name="pref_size_top_summary">Customize Size of the Popup</string>
    <string name="pref_width_portrait_title">Portrait Width</string>
    <string name="pref_width_portrait_summary">Width of Popup in Portrait</string>
    <string name="pref_height_portrait_title">Portrait Height</string>
    <string name="pref_height_portrait_summary">Height of Popup in Portrait</string>
    <string name="pref_width_landscape_title">Landscape Width</string>
    <string name="pref_width_landscape_summary">Width of Popup in Landscape</string>
    <string name="pref_height_landscape_title">Landscape Height</string>
    <string name="pref_height_landscape_summary">Height of Popup in Landscape</string>
    <string name="pref_behave_top_title">Popup Behavior</string>
    <string name="pref_behave_top_summary">Customize behaviour of popup window </string>
    <string name="pref_app_pause_title">App Pausing</string>
    <string name="pref_app_pause_summary_off">Do not pause the below app when a Halo window is above (Halo)</string>
    <string name="pref_app_pause_summary_on">Pause the below app when a Halo window is above (Default)</string>
    <string name="pref_keyboard_title">Keyboard Mode</string>
    <string name="pref_keyboard_summary">The action the popup will do when a keyboard opens.</string>
    <string name="pref_movable_top_title">Movable &amp; Resizable</string>
    <string name="pref_movable_sub_titlebar_title">TitleBar Settings</string>
    <string name="pref_movable_sub_titlebar_summary">Change Top TitleBar Behaviour</string>
    <string name="pref_movable_sub_moving_title">Moving Settings</string>
    <string name="pref_movable_sub_moving_summary">Change Moving Window Behaviour</string>
    <string name="pref_movable_sub_resizing_title">Resizing Settings</string>
    <string name="pref_movable_sub_resizing_summary">Change Resizing Window Behaviour</string>
    <string name="pref_movable_sub_triangle_title">Triangle Settings</string>
    <string name="pref_movable_sub_triangle_summary">Change Bottom Left Triangle Properties</string>
    <string name="pref_movable_sub_quadrant_title">Quadrant Settings</string>
    <string name="pref_movable_sub_quadrant_summary">Change Bottom Right Quadrant Properties</string>
    <string name="pref_movable_sub_border_title">Border Settings</string>
    <string name="pref_movable_sub_border_summary">Change Window Border Properties</string>
    <string name="pref_movable_sub_other_title">Other Settings</string>
    <string name="pref_movable_sub_other_summary">Change Miscellaneous Properties</string>
    <string name="pref_movable_titlebar_size_title">TitleBar Size</string>
    <string name="pref_movable_titlebar_size_summary">Height of the titlebar</string>
    <string name="pref_movable_titlebar_separator_enabled_title">Enable TitleBar Separator Line</string>
    <string name="pref_movable_titlebar_separator_enabled_summary">Show a separator line below the titlebar</string>
    <string name="pref_movable_titlebar_separator_size_title">Separator Line Size</string>
    <string name="pref_movable_titlebar_separator_size_summary">Height of the separator line below the titlebar</string>
    <string name="pref_movable_titlebar_separator_color_title">Separator Line Color</string>
    <string name="pref_movable_titlebar_separator_color_summary">The color of the separator line below the titlebar</string>
    <string name="pref_movable_moving_start_pos_title">Retain Window Position on Start</string>
    <string name="pref_movable_moving_start_pos_summary">When opening a new window of the same app, place them in the same position and size of the original</string>
    <string name="pref_movable_moving_move_pos_title">Constant Window Position</string>
    <string name="pref_movable_moving_move_pos_summary">When resizing or moving a window, windows of the same app behind it will also be updated.</string>
    <string name="pref_movable_resizing_live_update_title">Live Resize Updating </string>
    <string name="pref_movable_resizing_live_update_summary">When resizing windows, contents will refresh immediately instead of showing an outline.\n(May reduce performance)</string>
    <string name="pref_movable_resizing_aero_snap_enabled_title">Snap-in Windows</string>
    <string name="pref_movable_resizing_aero_snap_enabled_summary">Drag a window to the any 4 edges of the screen to resize it to the respective half of the screen, similar to Aero Snap in Windows OS.</string>
    <string name="pref_movable_resizing_aero_snap_delay_title">Snap-in Delay</string>
    <string name="pref_movable_resizing_aero_snap_delay_summary">Delay in milliseconds before snap-in outline is shown.</string>
    <string name="pref_movable_resizing_aero_snap_splitbar_title">Split Bar</string>
    <string name="pref_movable_resizing_aero_snap_splitbar_summary">When 2 windows are snapped-in to each half of the screen, show a split bar between to resize the window splitting.</string>
    <string name="pref_movable_resizing_aero_snap_splitbar_color_title">Split Bar Color</string>
    <string name="pref_movable_resizing_aero_snap_splitbar_color_summary">Set Color for Split Bar</string>
    <string name="pref_movable_resizing_aero_snap_swipe_app_title">Swiping to next app</string>
    <string name="pref_movable_resizing_aero_snap_swipe_app_summary">When 2 or more windows are snapped to the same side of the screen, use 2 fingers to swipe left or right to switch between them.</string>
    <string name="pref_movable_moving_move_ab_title">Allow ActionBar to Move</string>
    <string name="pref_movable_moving_move_ab_summary">Use the ActionBar (or the top area for apps with no ActionBar) to move windows. </string>
    <string name="pref_movable_triangle_enable_title">Show Triangle</string>
    <string name="pref_movable_triangle_enable_summary">Show a triangle on the bottom left of the window for additional actions.</string>
    <string name="pref_movable_triangle_color_title">Triangle Color</string>
    <string name="pref_movable_triangle_color_summary">Color of the corner triangle</string>
    <string name="pref_movable_triangle_alpha_title">Triangle Alpha</string>
    <string name="pref_movable_triangle_alpha_summary">Transparency of the corner triangle</string>
    <string name="pref_movable_triangle_size_title">Triangle Size</string>
    <string name="pref_movable_triangle_size_summary">Size of the corner triangle</string>
    <string name="pref_movable_triangle_sp_action_title">Triangle Single Press Action</string>
    <string name="pref_movable_triangle_sp_action_summary">The action that will occur when clicking the corner triangle.</string>
    <string name="pref_movable_triangle_lp_action_title">Triangle Long Press Action</string>
    <string name="pref_movable_triangle_lp_action_summary">The action that will occur when long pressing the corner triangle.</string>
    <string name="pref_movable_quadrant_enable_title">Show Quadrant</string>
    <string name="pref_movable_quadrant_enable_summary">Show a quadrant on the bottom right of the window for additional actions.</string>
    <string name="pref_movable_quadrant_color_title">Quadrant Color</string>
    <string name="pref_movable_quadrant_color_summary">Color of the corner quadrant</string>
    <string name="pref_movable_quadrant_alpha_title">Quadrant Alpha</string>
    <string name="pref_movable_quadrant_alpha_summary">Transparency of the corner quadrant</string>
    <string name="pref_movable_quadrant_size_title">Quadrant Size</string>
    <string name="pref_movable_quadrant_size_summary">Size of the corner quadrant</string>
    <string name="pref_movable_quadrant_sp_action_title">Quadrant Single Press Action</string>
    <string name="pref_movable_quadrant_sp_action_summary">The action that will occur when clicking the corner quadrant.</string>
    <string name="pref_movable_quadrant_lp_action_title">Quadrant Long Press Action</string>
    <string name="pref_movable_quadrant_lp_action_summary">The action that will occur when long pressing the corner quadrant.</string>
    <string name="pref_movable_resize_enabled_title">Enable Resizing</string>
    <string name="pref_movable_resize_enabled_summary">Use to resize window when dragged.</string>
    <string name="pref_movable_dragging_enabled_title">Enable Dragging</string>
    <string name="pref_movable_dragging_enabled_summary">Use to move window when dragged.</string>
    <string name="pref_movable_border_enable_title">Show Border</string>
    <string name="pref_movable_border_enable_summary">Show a border around the edge of the window</string>
    <string name="pref_movable_border_color_title">Border Color</string>
    <string name="pref_movable_border_color_summary">Color of the border</string>
    <string name="pref_movable_border_thickness_title">Border Width</string>
    <string name="pref_movable_border_thickness_summary">Thickness of the border in pixels</string>
    <string name="pref_movable_others_minimize_to_statusbar_title">Minimize to Statusbar</string>
    <string name="pref_movable_others_minimize_to_statusbar_summary">Show applications in statusbar when minimized.</string>
    <string name="pref_movable_others_tinted_title_enable_title">Tinted TitleBar</string>
    <string name="pref_movable_others_tinted_title_enable_summary">Use the app\'s actionbar color for the titlebar.\nBased on Tinted StatusBar by MohammadAG. \n(Requires force-closing open apps to take effect)</string>
    <string name="pref_movable_others_tinted_title_hsv_title">Max HS[V] for black icons</string>
    <string name="pref_movable_others_tinted_title_hsv_summary">Maximum HS[V] before auto-switching to black icons \n(Ignored when action bar has a custom text color)</string>
    <string name="pref_movable_others_tinted_title_border_title">Tint Window Border</string>
    <string name="pref_movable_others_tinted_title_border_summary">Change the window border (if enabled) to the actionbar color.</string>
    <string name="pref_movable_others_tinted_title_corner_title">Tint Window Corners</string>
    <string name="pref_movable_others_tinted_title_corner_summary">Change the triangle and quadrant (if enabled) to the actionbar color.</string>
    <string name="pref_systemui_top_title">SystemUI Mods</string>
    <string name="pref_notif_warning">These mods are for AOSP-based ROMs and, thus, untested with other ROMs. If you experience continuous SystemUI force closes, immediately disable these mods.</string>
    <string name="pref_notif_long_click_title">Long Press Notification Option</string>
    <string name="pref_notif_long_click_summary">Adds \"Open in Halo\" option when long-pressing notifications.</string>
    <string name="pref_notif_single_click_title">Single Click Notification Halo</string>
    <string name="pref_notif_single_click_summary">Use together with \"Long Press Notification Option\". Unlike the above, it adds \"Open Normally\" when long-pressing &amp; allows single-clicking notification to open in halo.</string>
</resources>