<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_movable_top_title" >

    <SwitchPreference
        android:defaultValue="false"
        android:key="window_movable"
        android:title="@string/pref_movable_top_title" />

    <!-- TitleBar -->
    <Preference
        android:dependency="window_movable"
        android:key="window_movable_titlebar_screen"
        android:summary="@string/pref_movable_sub_titlebar_summary"
        android:title="@string/pref_movable_sub_titlebar_title" />

    <!-- Moving -->
    <PreferenceScreen
        android:dependency="window_movable"
        android:summary="@string/pref_movable_sub_moving_summary"
        android:title="@string/pref_movable_sub_moving_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="window_moving_start_pos_enabled"
            android:summary="@string/pref_movable_moving_start_pos_summary"
            android:title="@string/pref_movable_moving_start_pos_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="window_moving_start_pos_enabled"
            android:key="window_moving_move_pos_enabled"
            android:summary="@string/pref_movable_moving_move_pos_summary"
            android:title="@string/pref_movable_moving_move_pos_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="window_moving_move_ab_enabled"
            android:summary="@string/pref_movable_moving_move_ab_summary"
            android:title="@string/pref_movable_moving_move_ab_title" />
    </PreferenceScreen>

    <!-- Resizing -->
    <PreferenceScreen
        android:dependency="window_movable"
        android:summary="@string/pref_movable_sub_resizing_summary"
        android:title="@string/pref_movable_sub_resizing_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="window_resizing_live_updating"
            android:summary="@string/pref_movable_resizing_live_update_summary"
            android:title="@string/pref_movable_resizing_live_update_title" />

        <PreferenceCategory android:title="@string/pref_movable_resizing_aero_snap_enabled_title" >
            <SwitchPreference
                android:defaultValue="true"
                android:key="window_resizing_aero_snap_enabled"
                android:summary="@string/pref_movable_resizing_aero_snap_enabled_summary"
                android:title="@string/pref_movable_resizing_aero_snap_enabled_title" />

            <com.zst.xposed.halo.floatingwindow.preferences.WidgetNumberPicker
                defaultValue="1000"
                maximum="10000"
                minimum="1"
                android:dependency="window_resizing_aero_snap_enabled"
                android:key="window_resizing_aero_snap_delay"
                android:summary="@string/pref_movable_resizing_aero_snap_delay_summary"
                android:title="@string/pref_movable_resizing_aero_snap_delay_title" />

            <SwitchPreference
                android:defaultValue="true"
                android:dependency="window_resizing_aero_snap_enabled"
                android:key="window_resizing_aero_snap_splitbar"
                android:summary="@string/pref_movable_resizing_aero_snap_splitbar_summary"
                android:title="@string/pref_movable_resizing_aero_snap_splitbar_title" />
            <com.zst.xposed.halo.floatingwindow.preferences.ColorPicker
                defaultValue="33b5e5"
                android:dependency="window_resizing_aero_snap_enabled"
                android:key="window_resizing_aero_snap_splitbar_color"
                android:summary="@string/pref_movable_resizing_aero_snap_splitbar_color_summary"
                android:title="@string/pref_movable_resizing_aero_snap_splitbar_color_title" />
            <SwitchPreference
                android:defaultValue="false"
                android:dependency="window_resizing_aero_snap_enabled"
                android:key="window_resizing_aero_snap_swipe_app"
                android:summary="@string/pref_movable_resizing_aero_snap_swipe_app_summary"
                android:title="@string/pref_movable_resizing_aero_snap_swipe_app_title" />
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- Triangle -->
    <PreferenceScreen
        android:dependency="window_movable"
        android:summary="@string/pref_movable_sub_triangle_summary"
        android:title="@string/pref_movable_sub_triangle_title" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="window_triangle_enabled"
            android:summary="@string/pref_movable_triangle_enable_summary"
            android:title="@string/pref_movable_triangle_enable_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_resize_enabled"
            android:summary="@string/pref_movable_resize_enabled_summary"
            android:title="@string/pref_movable_resize_enabled_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_dragging_enabled"
            android:summary="@string/pref_movable_dragging_enabled_summary"
            android:title="@string/pref_movable_dragging_enabled_title" />

        <com.zst.xposed.halo.floatingwindow.preferences.ColorPicker
            defaultValue="FFFFFF"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_color"
            android:summary="@string/pref_movable_triangle_color_summary"
            android:title="@string/pref_movable_triangle_color_title" />

        <com.zst.xposed.halo.floatingwindow.preferences.WidgetFloatPercentage
            defaultValue="1"
            maximum="1"
            minimum="0"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_alpha"
            android:summary="@string/pref_movable_triangle_alpha_summary"
            android:title="@string/pref_movable_triangle_alpha_title" />

        <com.zst.xposed.halo.floatingwindow.preferences.WidgetNumberPicker
            defaultValue="36"
            maximum="100"
            minimum="1"
            android:dependency="window_triangle_enabled"
            android:key="window_triangle_size"
            android:summary="@string/pref_movable_triangle_size_summary"
            android:title="@string/pref_movable_triangle_size_title" />

        <ListPreference
            android:defaultValue="0"
            android:dependency="window_triangle_enabled"
            android:entries="@array/option_movable_corner_entries"
            android:entryValues="@array/option_movable_corner_values"
            android:key="window_triangle_sp_action"
            android:summary="@string/pref_movable_triangle_sp_action_summary"
            android:title="@string/pref_movable_triangle_sp_action_title" />
        <ListPreference
            android:defaultValue="1"
            android:dependency="window_triangle_enabled"
            android:entries="@array/option_movable_corner_entries"
            android:entryValues="@array/option_movable_corner_values"
            android:key="window_triangle_lp_action"
            android:summary="@string/pref_movable_triangle_lp_action_summary"
            android:title="@string/pref_movable_triangle_lp_action_title" />
    </PreferenceScreen>

    <!-- Quadrant -->
    <PreferenceScreen
        android:dependency="window_movable"
        android:summary="@string/pref_movable_sub_quadrant_summary"
        android:title="@string/pref_movable_sub_quadrant_title" >
        <SwitchPreference
            android:defaultValue="false"
            android:key="window_quadrant_enabled"
            android:summary="@string/pref_movable_quadrant_enable_summary"
            android:title="@string/pref_movable_quadrant_enable_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_resize_enabled"
            android:summary="@string/pref_movable_resize_enabled_summary"
            android:title="@string/pref_movable_resize_enabled_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_dragging_enabled"
            android:summary="@string/pref_movable_dragging_enabled_summary"
            android:title="@string/pref_movable_dragging_enabled_title" />

        <com.zst.xposed.halo.floatingwindow.preferences.ColorPicker
            defaultValue="FFFFFF"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_color"
            android:summary="@string/pref_movable_quadrant_color_summary"
            android:title="@string/pref_movable_quadrant_color_title" />

        <com.zst.xposed.halo.floatingwindow.preferences.WidgetFloatPercentage
            defaultValue="1"
            maximum="1"
            minimum="0"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_alpha"
            android:summary="@string/pref_movable_quadrant_alpha_summary"
            android:title="@string/pref_movable_quadrant_alpha_title" />

        <com.zst.xposed.halo.floatingwindow.preferences.WidgetNumberPicker
            defaultValue="36"
            maximum="100"
            minimum="1"
            android:dependency="window_quadrant_enabled"
            android:key="window_quadrant_size"
            android:summary="@string/pref_movable_quadrant_size_summary"
            android:title="@string/pref_movable_quadrant_size_title" />

        <ListPreference
            android:defaultValue="0"
            android:dependency="window_quadrant_enabled"
            android:entries="@array/option_movable_corner_entries"
            android:entryValues="@array/option_movable_corner_values"
            android:key="window_quadrant_sp_action"
            android:summary="@string/pref_movable_quadrant_sp_action_summary"
            android:title="@string/pref_movable_quadrant_sp_action_title" />
        <ListPreference
            android:defaultValue="0"
            android:dependency="window_quadrant_enabled"
            android:entries="@array/option_movable_corner_entries"
            android:entryValues="@array/option_movable_corner_values"
            android:key="window_quadrant_lp_action"
            android:summary="@string/pref_movable_quadrant_lp_action_summary"
            android:title="@string/pref_movable_quadrant_lp_action_title" />
    </PreferenceScreen>

    <!-- Border -->
    <PreferenceScreen
        android:dependency="window_movable"
        android:summary="@string/pref_movable_sub_border_summary"
        android:title="@string/pref_movable_sub_border_title" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="window_border_enabled"
            android:summary="@string/pref_movable_border_enable_summary"
            android:title="@string/pref_movable_border_enable_title" />

        <com.zst.xposed.halo.floatingwindow.preferences.ColorPicker
            defaultValue="000000"
            android:dependency="window_border_enabled"
            android:key="window_border_color"
            android:summary="@string/pref_movable_border_color_summary"
            android:title="@string/pref_movable_border_color_title" />

        <com.zst.xposed.halo.floatingwindow.preferences.WidgetNumberPicker
            defaultValue="0"
            maximum="100"
            minimum="0"
            android:dependency="window_border_enabled"
            android:key="window_border_thickness"
            android:summary="@string/pref_movable_border_thickness_summary"
            android:title="@string/pref_movable_border_thickness_title" />
    </PreferenceScreen>

    <!-- Others -->
    <PreferenceScreen
        android:dependency="window_movable"
        android:summary="@string/pref_movable_sub_other_summary"
        android:title="@string/pref_movable_sub_other_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="window_minimize_to_statusbar"
            android:summary="@string/pref_movable_others_minimize_to_statusbar_summary"
            android:title="@string/pref_movable_others_minimize_to_statusbar_title" />

        <PreferenceCategory android:title="@string/pref_movable_others_tinted_title_enable_title" >
            <SwitchPreference
                android:defaultValue="true"
                android:key="window_tinted_title_enabled"
                android:summary="@string/pref_movable_others_tinted_title_enable_summary"
                android:title="@string/pref_movable_others_tinted_title_enable_title" />

            <com.zst.xposed.halo.floatingwindow.preferences.WidgetFloatPercentage
                defaultValue="0.9"
                maximum="1"
                minimum="0"
                android:dependency="window_tinted_title_enabled"
                android:key="window_tinted_title_hsv"
                android:summary="@string/pref_movable_others_tinted_title_hsv_summary"
                android:title="@string/pref_movable_others_tinted_title_hsv_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:dependency="window_tinted_title_enabled"
                android:key="window_tinted_title_bordertint"
                android:summary="@string/pref_movable_others_tinted_title_border_summary"
                android:title="@string/pref_movable_others_tinted_title_border_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:dependency="window_tinted_title_enabled"
                android:key="window_tinted_title_cornertint"
                android:summary="@string/pref_movable_others_tinted_title_corner_summary"
                android:title="@string/pref_movable_others_tinted_title_corner_title" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>